--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,16 +6,54 @@
   <title>{% block title %}Bookstore{% endblock title %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <!-- CSS only -->
+  <!-- CSS only -->
+ 
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
   <header>
+    <nav class="nav">
+        <div class="container">
+            <div class="logo">
+                <a href="#">Your Logo</a>
+            </div>
+            <div id="mainListDiv" class="main_list">
+                <ul class="navlinks">
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'account_logout'%}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url 'account_login' %}">Login</a></li>
+                        <li><a href="{% url 'account_signup' %}">Signup</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+            <span class="navTrigger">
+                <i></i>
+                <i></i>
+                <i></i>
+            </span>
+        </div>
+        <style>
+            .home {
+                width: 100%;
+                height: 100vh;
+                 background-image: url("{% static 'images/home.jpg' %}");
+                background-position: center top;
+	            background-size:cover;
+            }
+
+        </style>
+    </nav>
+
+    <section class="home">
+    </section>
     <!-- Fixed navbar -->
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4
-     mb-3 bg-white border-bottom shadow-sm">
+     mb-3 bg-white border-bottom shadow-sm"> 
       <a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto
-      font-weight-normal">Bookstore</a>
+      font-weight-normal"></a>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">About</a>
         {% if user.is_authenticated %}
@@ -27,6 +65,7 @@
         {% endif %}
       </nav>
     </div>
+    
   </header>
   <div class="container">
     {% block content %}
@@ -34,8 +73,7 @@
   </div>
   <!-- JavaScript -->
   <!-- JS, Popper.js, and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
