--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,69 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-  <h1>Homepage</h1>
-  {% if user.is_authenticated %}
-    Hi {{ user.email }}!
-    <p><a href="{% url 'account_logout' %}">Log Out</a></p>
-  {% else %}
-    <p>You are not logged in</p>
-    <a href="{% url 'account_login' %}">Log In</a>
-    <a href="{% url 'account_signup' %}">Sign Up</a>
-  {% endif %}
+<nav class="nav">
+    <div class="container">
+        <div class="logo">
+            <a href="#">Your Logo</a>
+        </div>
+        <div id="mainListDiv" class="main_list">
+            <ul class="navlinks">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <span class="navTrigger">
+            <i></i>
+            <i></i>
+            <i></i>
+        </span>
+    </div>
+</nav>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+
+<h1>Testging</h1><h1>Testging</h1>
+
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+<h1>Testging</h1>
+v
+
+
+
+
 {% endblock content %}
